# numfort

./: .fortls  .gitignore  .gitmodules  CMakeLists.txt  LICENSES_bundled.txt  README.md  TODO.md  project-file.md
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  client.f90
examples/cmake/: CMakeLists.txt  numfort_consumer.f90
examples/interpolate/: concon.f90  curfit.f90  splder.f90
examples/openmp/: CMakeLists.txt  concon.f90  curfit.f90  minimize_lbfgsb.f90  minimize_slsqp.f90
examples/optimize/: CMakeLists.txt  minimize_bounded.f90  minimize_lbfgsb.f90
examples/stats/: CMakeLists.txt  glmnet.f90  stats_pcr.f90
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  cumsum.f90
src/benchmarks/stats/: CMakeLists.txt  dnorm.f90
src/client/: CMakeLists.txt  hellonumfort.f90
src/cmake/Modules/: FindTargetArch.cmake  Findfcore.cmake
src/cmake/modules/: Findfcore.cmake
src/examples/: CMakeLists.txt
src/examples/cmake/: CMakeLists.txt  numfort_consumer.f90
src/examples/interpolate/: CMakeLists.txt  concon.f90  concon_omp.f90  curfit.f90  curfit01.f90  curfit_omp.f90  splder.f90
src/examples/openmp/: CMakeLists.txt  concon.f90  curfit.f90  minimize_lbfgsb.f90  minimize_slsqp.f90
src/examples/optimize/: CMakeLists.txt  brent.f90  minimize_bounded.f90  minimize_lbfgsb.f90  minimize_lbfgsb_omp.f90  minimize_simplex.f90  minimize_slsqp.f90  minpack.f90  minpack_hybr.f90  minpack_hybrj.f90  minpack_lm.f90  root_brent.f90  root_newton.f90  slsqp_scipy.py
src/examples/stats/: CMakeLists.txt  glmnet.f90  sobol_seq.F90  stats_pcr.f90
src/install/: config-version.cmake.in  config.cmake.in
src/interfaces/: CMakeLists.txt  blas.f90  lapack.f90  minpack.f90
src/numfort/: CMakeLists.txt  cumsum_wrapper.finc  numfort.f90  numfort.f90.in  version.f90.in
src/numfort/arrays/: CMakeLists.txt  array_creation.f90  array_indexing.f90  array_sort.f90  arrays.f90  arrays_copy.f90  arrays_copy_logical.F90  arrays_copy_real32.F90  arrays_copy_real64.F90  arrays_create.F90  arrays_create.f90  arrays_grid.F90  arrays_grid_real32.F90  arrays_grid_real64.F90  arrays_index.F90  arrays_index.f90  arrays_manipulate.f90  arrays_norms.F90  arrays_setops.F90  arrays_shape.f90  arrays_sort.F90  arrays_sort.f90
src/numfort/common/: CMakeLists.txt  alloc.f90  common.F90  common.f90  cond_alloc.F90  cond_alloc.f90  copy_alloc.F90  copy_alloc.f90  copy_masked.F90  enums.f90  input_checks.F90  input_checks.f90  kinds.f90  print_helpers.f90  shape.F90  shape.f90  status.f90  strings.F90  swap.F90  testing.F90  testing.f90  testing_real32.F90  testing_real64.F90  transpose.f90  workspace.F90  workspace.f90  workspace_real32.F90  workspace_real64.F90
src/numfort/core/: CMakeLists.txt  cephes_stats.F90  combinatorics.F90  constants.f90  core.F90  core.f90  erfinv.F90  libcwrapper.F90  logexp.F90  misc.F90  numfort.f90
src/numfort/include/: gen_prec_headers.py  numfort.h  numfort_int32.h  numfort_int64.h  numfort_int8.h  numfort_pdt.h  numfort_real32.h  numfort_real64.h
src/numfort/integrate/: CMakeLists.txt  integrate.f90  integrate_basic.F90  quadpack.F90  quadpack.f90  quadpack_common.F90  quadpack_real64.F90
src/numfort/interp/: CMakeLists.txt  interp.f90
src/numfort/interpolate/: CMakeLists.txt  common.F90  common.f90  fitpack.f90  fitpack08.f90  fitpack_interfaces.f90  interp_linear.F90  interp_linear.f90  interp_pchip.F90  interp_result.f90  interpolate.f90  search.F90  search_real32.F90  search_real64.F90
src/numfort/io/: CMakeLists.txt  hdf5.F90  io.f90  io_common.F90  io_common.f90  io_fixed.F90
src/numfort/linalg/: CMakeLists.txt  lawson_hanson_common.f90  lawson_hanson_real64.F90  linalg.f90  linalg_core.F90  linalg_core.f90  linalg_core_real32.F90  linalg_core_real64.F90
src/numfort/optimize/: CMakeLists.txt  brent.F90  brent.f90  common.f90  diff_helpers.F90  diff_helpers_real32.F90  diff_helpers_real64.F90  fwrapper.F90  fwrapper_real32.F90  fwrapper_real64.F90  interfaces.F90  interfaces.f90  interfaces_common.f90  interfaces_real32.F90  interfaces_real64.F90  minimize_bounded.F90  minimize_bounded_real32.F90  minimize_bounded_real64.F90  minimize_dfls.F90  minimize_dfls_real32.F90  minimize_dfls_real64.F90  minimize_lbfgsb.f90  minimize_lbfgsb_real64.F90  minimize_simplex.F90  minimize_simplex.f90  minimize_simplex_real32.F90  minimize_simplex_real64.F90  minimize_slsqp.f90  minimize_slsqp_ng_common.f90  minimize_slsqp_ng_real64.F90  minimize_slsqp_real64.f90  minpack.F90  minpack.f90  minpack_real64.F90  optim_result.F90  optim_result.f90  optim_result_real32.F90  optim_result_real64.F90  optimize.f90  root_bisect.F90  (+18 more)
src/numfort/polynomial/: CMakeLists.txt  hermite_e.F90  poly_complete.f90  poly_create.F90  poly_misc.F90  polynomial.f90  polyval.F90  ppoly.F90  ppoly_tensor.F90  ppolyint.F90  ppolyval.F90
src/numfort/polynomials/: CMakeLists.txt  poly_complete.f90  polyfit.F90  polynomial.f90  polyroot.F90  polyroots.F90  polyval.F90  polyval_complete.F90
src/numfort/stats/: CMakeLists.txt  combinatorics.F90  common.f90  cont_dist.F90  cont_dist.f90  data_helpers.f90  data_helpers_logical.F90  data_helpers_real32.F90  data_helpers_real64.F90  dcont.F90  ddisc.F90  dmvnorm.F90  (+38 more)
src/tests/: CMakeLists.txt  tests_cumsum.f90  tests_numfort.f90
src/wrappers/: CMakeLists.txt
tests/: CMakeLists.txt
tests/arrays/: copy.f90  delete.f90  insert.f90  kron.f90  sort.F90  vander.f90
tests/common/: CMakeLists.txt  cond_alloc.f90  copy_masked.f90
tests/core/: cephes_stats.f90
tests/integrate/: basic.f90  funcs.f90
tests/interpolate/: concon.f90  linear.f90  pchip.f90
tests/openmp/: CMakeLists.txt  linear_omp.f90
tests/optimize/: minimize_lbfgsb.f90  minimize_simplex.f90  minimize_slsqp.f90  root_broyden.f90  solver_map.f90
tests/polynomial/: CMakeLists.txt  poly_complete.f90  poly_create.f90  polyfit.f90  polyroots.f90  polyval.f90  ppoly.f90  ppoly_tensor.f90
tests/stats/: CMakeLists.txt  dfrechet.f90  dlogistic.f90  dmvnorm.f90  dnorm.f90  glmnet.f90  ineq.f90  lm.f90  random_integer.f90
tests/wrappers/: CMakeLists.txt  blas95.F90
(+344 files in other folders)
